syntax = "proto3";
option csharp_namespace = "WOClient.Library.Api.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service Comments {
	rpc AddComment (CommentInput) returns (google.protobuf.Int32Value);
}

message CommentInput {
	int32 taskId	= 1;
	int32 userId	= 2;
	string comment  = 3;
}

